--- a/SportsSideKick/app/src/main/res/layout/include_input_field.xml
+++ b/SportsSideKick/app/src/main/res/layout/include_input_field.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/post_container"
@@ -13,7 +12,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="#08000000"/>
+        android:background="#08000000" />
 
     <LinearLayout
         android:id="@+id/fieldContainer"
@@ -29,41 +28,41 @@
             android:layout_marginStart="@dimen/margin_15"
             android:src="?profileImageIcon"
             android:visibility="gone"
-            tools:visibility="visible"/>
+            tools:visibility="visible" />
 
         <android.support.v7.widget.AppCompatEditText
             android:id="@+id/post_text"
             android:layout_width="0dp"
             android:layout_height="56dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:hint="@string/comment_hint"
             android:inputType="textCapSentences"
             android:paddingEnd="@dimen/margin_15"
-            android:background="@null"
             android:paddingStart="@dimen/margin_15"
-            android:layout_weight="1"
-            android:hint="@string/comment_hint"
             android:textColor="@color/black"
             android:textColorHint="@color/colorGrayDark"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
 
     </LinearLayout>
 
-    <android.support.v7.widget.AppCompatImageView
+    <ImageButton
         android:id="@+id/post_comment_button"
-        android:layout_width="@dimen/width_25"
-        android:layout_height="@dimen/width_25"
+        android:layout_width="48dp"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_height="48dp"
+        android:scaleType="fitCenter"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="@dimen/margin_5"
-        android:layout_marginEnd="@dimen/margin_20"
-        android:layout_marginTop="@dimen/margin_5"
         android:adjustViewBounds="true"
         android:src="@drawable/btn_send"
         android:tint="@color/black"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        tools:visibility="visible" />
 
     <ProgressBar
-        style="?android:attr/progressBarStyle"
         android:id="@+id/post_comment_progress_bar"
+        style="?android:attr/progressBarStyle"
         android:layout_width="@dimen/width_25"
         android:layout_height="@dimen/width_25"
         android:layout_alignParentEnd="true"
@@ -72,12 +71,12 @@
         android:layout_marginEnd="@dimen/margin_20"
         android:layout_marginTop="@dimen/margin_5"
         android:adjustViewBounds="true"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <View
         android:layout_width="match_parent"
-        android:layout_below="@id/fieldContainer"
         android:layout_height="1dp"
-        android:background="#05000000"/>
+        android:layout_below="@id/fieldContainer"
+        android:background="#05000000" />
 
 </RelativeLayout>
