--- a/SportsSideKick/app/src/main/res/layout/fragment_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news.xml
@@ -15,27 +15,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/topImage"
-                android:layout_width="match_parent"
-                android:layout_height="240dp"
+                android:layout_width="0dp"
+                android:layout_height="200dp"
                 android:background="@color/colorPrimaryDark"
                 android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 tools:src="@drawable/image_wall_background" />
 
             <TextView
                 android:id="@+id/topCaption"
                 style="@style/semiBoldText"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/topImage"
-                android:layout_alignTop="@id/topImage"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/header_image_title_margin_top"
+                android:layout_marginTop="36dp"
                 android:gravity="center"
                 android:shadowColor="@color/black_transparent_154"
                 android:shadowDx="1"
@@ -45,18 +44,26 @@
                 android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textColor="@color/white"
-                android:textSize="@dimen/font_size_36" />
+                android:textSize="@dimen/font_size_36"
+                app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/topImage"
+                app:layout_constraintTop_toTopOf="@+id/topImage" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_below="@id/topImage"
-                android:layout_marginTop="-8dp"
                 android:clipToPadding="false"
-                android:paddingTop="4dp" />
+                android:paddingTop="4dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/topImage"
+                tools:layout_marginEnd="8dp"
+                tools:layout_marginStart="8dp" />
 
-        </RelativeLayout>
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.v4.widget.NestedScrollView>
 
