--- a/SportsSideKick/app/src/main/res/layout/fragment_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news.xml
@@ -5,13 +5,13 @@
     android:id="@+id/swipeRefreshLayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/login_background"
     android:enabled="false"
     tools:context=".ui.fragment.content.WallFragment"
     tools:ignore="ContentDescription,MissingPrefix,RtlHardcoded,RtlSymmetry">
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/scroll"
+        android:fillViewport="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -23,7 +23,6 @@
                 android:id="@+id/topImage"
                 android:layout_width="0dp"
                 android:layout_height="200dp"
-                android:background="@color/colorPrimaryDark"
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -53,15 +52,15 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                tools:layout_height="500dp"
+                tools:paddingLeft="8dp"
+                android:background="@color/login_background"
+                android:layout_height="wrap_content"
                 android:clipToPadding="false"
                 android:paddingTop="4dp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/topImage"
-                tools:layout_marginEnd="8dp"
-                tools:layout_marginStart="8dp" />
+                app:layout_constraintTop_toBottomOf="@+id/topImage" />
 
         </android.support.constraint.ConstraintLayout>
 
