--- a/SportsSideKick/app/src/main/res/layout/fragment_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news.xml
@@ -17,6 +17,7 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
+            tools:layout_marginTop="-48dp"
             android:layout_height="match_parent">
 
             <android.support.v7.widget.AppCompatImageView
