--- a/SportsSideKick/app/src/main/res/layout/activity_main.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main.xml
@@ -155,8 +155,7 @@
             android:layout_height="match_parent"
             android:layout_above="@id/bottom_menu_recycler_view"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:background="@color/transparent" />
+            android:layout_alignParentTop="true" />
 
         <RelativeLayout
             android:id="@+id/blurred_background"
