--- a/SportsSideKick/app/src/main/res/layout/fragment_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news.xml
@@ -60,7 +60,8 @@
                 android:paddingTop="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/topImage" />
+                app:layout_constraintTop_toBottomOf="@+id/topImage"
+                tools:paddingStart="8dp" />
 
         </android.support.constraint.ConstraintLayout>
 
