--- a/SportsSideKick/app/src/main/res/layout/fragment_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news.xml
@@ -55,6 +55,7 @@
                 android:layout_height="wrap_content"
                 android:clipToPadding="false"
                 android:paddingTop="-8dp"
+                android:nestedScrollingEnabled="false"
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
