--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -259,7 +259,7 @@
                     android:layout_marginEnd="@dimen/margin_5"
                     android:layout_marginStart="@dimen/margin_15"
                     android:layout_marginTop="12dp"
-                    android:textColor="@color/colorGray"
+                    android:textColor="#40000000"
                     android:textSize="12sp"
                     android:visibility="gone"
                     tools:text="Yesterday"
