--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -252,6 +252,7 @@
 
                 <TextView
                     android:id="@+id/dateLabel"
+                    android:layout_marginLeft="2dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/social_buttons_container"
@@ -261,9 +262,7 @@
                     android:layout_marginTop="12dp"
                     android:textColor="#40000000"
                     android:textSize="12sp"
-                    android:visibility="gone"
-                    tools:text="Yesterday"
-                    tools:visibility="visible" />
+                    tools:text="Yesterday" />
 
                 <TextView
                     android:id="@+id/title"
