--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -79,6 +79,15 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
 
+                <TextView
+                    android:id="@+id/dateLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_marginEnd="12dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="#40000000"
+                    android:textSize="12sp"
+                    tools:text="Yesterday" />
+
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/likes_icon"
                     android:layout_width="@dimen/width_15"
