--- a/SportsSideKick/app/src/main/res/layout/wall_item_stats.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_stats.xml
@@ -78,6 +78,7 @@
         android:layout_below="@id/text_content"
         android:layout_toEndOf="@+id/strip"
         android:layout_toStartOf="@+id/image"
+        android:clipToPadding="false"
         android:paddingBottom="@dimen/margin_5">
 
         <LinearLayout
@@ -143,6 +144,15 @@
                 android:textSize="@dimen/font_size_10"
                 tools:text="6901" />
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/dateLabel"
+            android:layout_toEndOf="@id/likes_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#40000000"
+            android:textSize="12sp"
+            tools:text="Yesterday" />
     </RelativeLayout>
 
     <View
