--- a/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
@@ -83,6 +83,15 @@
         android:orientation="horizontal"
         android:paddingBottom="@dimen/margin_5">
 
+        <TextView
+            android:id="@+id/dateLabel"
+            android:layout_width="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:layout_height="wrap_content"
+            android:textColor="#40000000"
+            android:textSize="12sp"
+            tools:text="Yesterday" />
+
         <LinearLayout
             android:id="@+id/likes_container"
             android:layout_width="wrap_content"
@@ -107,7 +116,8 @@
                     android:id="@+id/likes_icon"
                     android:layout_width="@dimen/width_15"
                     android:layout_height="@dimen/height_15"
-                    android:layout_marginEnd="@dimen/margin_2"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
                     android:background="@drawable/ic_like" />
 
             </RelativeLayout>
