--- a/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
@@ -125,6 +125,7 @@
             <TextView
                 android:id="@+id/likes_count"
                 android:layout_width="wrap_content"
+                android:layout_marginStart="2dp"
                 android:layout_height="wrap_content"
                 tools:text="6901"
                 android:textSize="@dimen/font_size_10" />
