--- a/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
@@ -3,7 +3,8 @@
 
     <color name="colorAccentDark">#4ff70e</color>
     <color name="colorAccentSemiDark">#c3ff00</color>
-    <color name="colorAccent">#c9af01</color>
+    <color name="colorAccent">#ffef16</color>
+    <color name="textColorLink">#c9af01</color>
 
     <color name="colorAccentLight">#fdfe24</color>
     <color name="colorPrimaryAbsoluteDark">#00181e</color>
