--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -260,8 +260,7 @@
                     android:layout_below="@id/social_buttons_container"
                     android:layout_marginBottom="-12dp"
                     android:layout_marginEnd="@dimen/margin_5"
-                    android:layout_marginLeft="2dp"
-                    android:layout_marginStart="@dimen/margin_15"
+                    android:layout_marginStart="18dp"
                     android:layout_marginTop="12dp"
                     android:textColor="#40000000"
                     android:textSize="12sp"
@@ -442,8 +441,8 @@
 
     <ImageButton
         android:id="@+id/close_button"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginStart="-8dp"
         android:layout_marginTop="16dp"
         android:background="@null"
